--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "vercel": "^33.6.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@babel/plugin-proposal-private-property-in-object": ""
   },
   "scripts": {
     "start": "node server.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "dev": "nodemon index.js"
   },
   "eslintConfig": {
