--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
